src/objects/NVMContactWorld__Background_Action__c.object
<CustomObject>
    <fields>
        <fullName>NVMContactWorld__Action_Type__c</fullName>
        <label>Action Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Error flag set to prevent problem jobs blocking the queue</description>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Key__c</fullName>
        <description>Search Key for use in grouping similar actions</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Params__c</fullName>
        <label>Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__When__c</fullName>
        <label>When</label>
        <type>DateTime</type>
    </fields>
    <label>Background Action</label>
    <listViews>
        <fullName>NVMContactWorld__All</fullName>
        <columns>NAME</columns>
        <columns>NVMContactWorld__Action_Type__c</columns>
        <columns>NVMContactWorld__Failed__c</columns>
        <columns>NVMContactWorld__Params__c</columns>
        <columns>NVMContactWorld__When__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NVMContactWorld__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NVMContactWorld__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Background Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>